--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -167,7 +167,7 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 \flushleft
 
 \fontsize{8}{8}\selectfont
-$^\star$This table contains \enet scores for IRAT computed using current sequence data, thereby computing the current risk of these strains.  -1 indicates missing data, either from lack of human sequence data available for that virus sub-type (less than 30 strains) or missing IRAT sequence data (in the case of A/duck/New York/1996)
+$^\star$This table contains \enet scores for IRAT computed using current sequence data, thereby computing the current risk of these strains.  
 \end{table}
 \else
 \refstepcounter{table}\label{irattab_current}
@@ -205,7 +205,7 @@ $^\star$This table contains \enet scores for IRAT computed using current sequenc
 %#############################################
 %#############################################
 \begin{table}\centering
-\captionN{General linear model evaluating \enet emergence risk predictions against IRAT estimates}\label{tabreg}\centering
+\captionN{General linear model evaluating \enet emergence risk predictions against IRAT estimates}\label{tabregGLM}\centering
 
 \mnp{6.5in}{
   \fontsize{8}{8}\selectfont
