--- a/tex/main.tex
+++ b/tex/main.tex
@@ -19,16 +19,16 @@
 
  
 \tikzexternalenable   
-% \pgfplotsset{compat=1.18}
+\pgfplotsset{compat=1.18}
 
 \begin{document}  
-\maketitle
+\maketitle 
 
 {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
   {\normalfont \itshape Abstract:} Animal \infl  strains emerging into humans are suspected to have triggered devastating  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}. Yet, our ability to evaluate the pandemic potential of individual strains that do not yet circulate in humans, remains limited. In this study we introduce the \enet, to computationally learn how viable genotypic variations are shaped by evolutionary constraints using only genomic sequences  of key viral proteins. Analyzing Haemagglutinnin (HA) and Neuraminidase (NA) sequences from nearly 100,000 unique strains, we estimate the likelihood of specific future mutations, yielding the numerical odds of one strain giving rise to a specific descendant via natural processes. After validating our model to forecast the dominant strain(s) for seasonal flu, with \enet-based forecasts significantly outperforming WHO recommendations almost consistently over the past two decades for H1N1/H3N2 subtypes, individually in the Northern/Southern hemispheres (HA match average improvement $32.25\% $ over 2 decades, $69.07\%$ in the last decade, and $81.13\%$ in the five year period pre-\cov), we assess the pandemic potential of animal strains that do not yet circulate in humans. While the state-of-the-art Influenza Risk Assessment Tool (IRAT) from the CDC comprises multiple time-consuming experimental assays, our calculations take $\approx 6$ seconds per strain, while strongly correlating with published IRAT scores (correlation=$0.703$, p-value $= 0.00026$). This six orders of magnitude speedup (weeks vs seconds) in identifying risky strains is a necessary step to exploit  current surveillance capacity via scalably analyzing thousands of strains collected annually. Considering 6,066 wild \infl viruses sequenced post 2020, we identify individual strains of diverse subtypes, hosts and geo-locations posing maximal risk, with six having estimated emergence scores $> 6.5$. Such scalable risk-ranking can enable preemptive pandemic mitigation, including targeted inoculation of animal hosts before the first human infection, and outline new public health measures that are potentially effective notwithstanding possible vaccine hesitancy in humans that impact optimal pandemic response.}
   
 \vspace{10pt}
-\section*{Introduction}
+%\section*{Introduction}
 Influenza viruses constantly evolve~\cite{dos2016influenza}, altering surface protein structures quickly   to evade the prevailing host immunity, and cause the recurring seasonal  epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response hinges on annually  inoculating  the  population with a  reformulated  vaccine~\cite{boni2008vaccination,dos2016influenza}.  Among numerous factors that hinder optimal design of the seasonal flu shot, failing to correctly predict the future dominant strain  dramatically reduces vaccine effectiveness~\cite{tricco2013comparing}. Despite  recent advances~\cite{neher2014predicting,huddleston2020integrating} such predictions remain imperfect. In addition to  the seasonal  epidemic,  \infl strains spilling over into humans from animal reservoirs have triggered  pandemics  at least four times (1918 Spanish flu/H1N1, 1957 Asian flu/H2N2, 1968 hongkong flu/H3N2, 2009 swine flu/H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of the  sudden \hcov emergence
 fresh in our minds, a looming question  is whether we can  preempt and mitigate such events in the future. \infl, partly on account of its segmented genome and its wide prevalence in common animal hosts, can easily incorporate genes from multiple strains and (re)emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns}, thus harboring  a high pandemic potential.
 
@@ -51,7 +51,7 @@ In this study we used  HA and NA  sequences from   unique \infl strains in the p
 Inference of the \enet predictors is our first step, which then induces  an intrinsic distance metric between strains. The \qdist  (Eq.~\eqref{q-distance} in \METHODS) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the conditional residue distributions, averaged over the sequence. Unlike the classical approach of measuring the number of edits between sequences, the \qdist is informed by the \enet-inferred  dependencies, and adapts to the specific subtype, allele frequencies, and environmental variations. Central to our approach is the theoretical result (Theorem~\ref{thmbnd} in \METHODS) that the \qdist  approximates the log-likelihood of spontaneous change $i.e.$ $\log Pr(x \rightarrow y )$. Note that despite general correlation between \qdist and edit-distance, the \qdist between fixed strains can change if only the background environment changes (\SUPPLEMENTARY Table~S-\ref{tabex},S-\ref{tabcor}).
 
 
-We carry out in-silico experiments to test if our inferred  constraints  are indeed reflective of organismal  biology, asking if \enet-constrained simulated mutational perturbations to observed strains produces strains  collected in future, identified using NCBI BLAST (\SUPPLEMENTARY Fig.~S-\ref{figsoa}). We find that while random variations rapidly diverge  trajectories, \enet-mediated perturbations maintain a high degree of match, and produces matches closer in time to the collection of the  initial sequence.
+We carry out in-silico experiments to test if our inferred  constraints  are indeed reflective of organismal  (\METHODS and \SUPPLEMENTARY Fig.~S-\ref{figsoa}). We find that while random mutations to genomic sequences produce rapidly diverging sets, \enet-constrained replacements produce sequences that are verifiably meaningful.
 
 
 Determining the numerical odds of a spontaneous jump $ Pr(x \rightarrow y)$ (Fig.~\ref{figscheme}) allows us to frame the problem of forecasting  dominant strain(s), and that of estimating the  pandemic potential of an animal strain as  mathematical propositions (albeit with some simplifying assumptions), with  approximate solutions (Fig.~\ref{figscheme}c-d). Thus,  a dominant strain for an upcoming  season may be identified as one which maximizes the joint probability of simultaneously arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).  This does not deterministically specify the dominant strain, but a strain satisfying this criterion  has  high odds of acquiring dominance. And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain. In the context of  forecasting  future dominant strain(s),  we derive a search criteria (See \METHODS) from the above proposition, to identify  historical strain(s) that are  expected to be close to the next dominant strain(s):
@@ -65,7 +65,7 @@ Prediction of the future dominant strain as  a close match to a historical strai
 Finding multi-cluster predictions has the potential to yield even more improved results, as seen in Fig.~\ref{figseasonal} and \EXTENDED Table~\ref{tabrec8} through \EXTENDED Table~\ref{tabrec11}.
 Visually, Fig.~\ref{figseasonal} illustrates the relative gains computed for both subtypes and the two hemispheres.
 
-Additional improvement is possible if we recommend multiple strains every season for the vaccine cocktail (Fig.~\ref{figseasonal}e,f,k,l). Detailed  multi-strain recommendations made by the \enet  for two subtypes (H1N1, H3N2), for two genes (HA, NA) and for the northern and the southern hemispheres over the previous two decades are enumerated in the \SUPPLEMENTARY  Table~S-\ref{tabrec8} through \SUPPLEMENTARY Table~S-\ref{tabrec11}. Comparing the \enet inferred strain (ENT) against the one recommended by the WHO, we find that the residues that only the  \enet recommendation matches correctly with dominant strain (DOM), while the WHO recommendation fails,  are largely localized within the RBD, with $>57\%$ occurring within  the RBD on average (\SUPPLEMENTARY Fig.~S-\ref{figseq}a), and 3) when the WHO strain deviates from  the ENT/DOM   matched residue, the ``correct'' residue is often replaced  in the WHO recommendation with one that has very different side chain, hydropathy  and/or chemical properties (\SUPPLEMENTARY Fig.~S-\ref{figseq}b-f), suggesting deviations in recognition characteristics~\cite{carugo2001normalized,righetto2014comparative}. Combined with the fact that we find circulating strains are almost always within a few edits of the DOM (\SUPPLEMENTARY Fig.~S-\ref{figdom}), these observations suggest that  hosts vaccinated with the ENT recommendation is more likely to have season-specific antibodies that are more likely to recognize a larger cross-section of the circulating strains.
+Additional improvement is possible if we recommend multiple strains every season for the vaccine cocktail (Fig.~\ref{figseasonal}e,f,k,l). Detailed  multi-strain recommendations made by the \enet  for two subtypes (H1N1, H3N2), for two genes (HA, NA) and for the northern and the southern hemispheres over the previous two decades are enumerated in the \SUPPLEMENTARY  Table~S-\ref{tabrec8} through \SUPPLEMENTARY Table~S-\ref{tabrec11}. Comparing the \enet inferred strain (ENT) against the one recommended by the WHO, we find that the residues that only the  \enet recommendation matches correctly with dominant strain (DOM), while the WHO recommendation fails,  are largely localized within the RBD, with $>57\%$ occurring within  the RBD on average (\SUPPLEMENTARY Fig.~S-\ref{figseq}a), and 3) when the WHO strain deviates from  the ENT/DOM   matched residue, the ``correct'' residue is often replaced  in the WHO recommendation with one that has very different side chain, hydropathy  and/or chemical properties (\SUPPLEMENTARY Fig.~S-\ref{figseq}b-f), suggesting deviations in recognition characteristics~\cite{carugo2001normalized,righetto2014comparative}. Combined with the fact that we find circulating strains are almost always within a few edits of the DOM (\SUPPLEMENTARY Fig.~S-\ref{figdom}), these observations suggest that  hosts vaccinated with the ENT recommendation is can have season-specific antibodies that recognize a larger cross-section of the circulating strains.
 
 Our primary claim, however,  is the ability to estimate the pandemic potential of novel animal strains, via a  time-varying \erisk score $\rho_t(x)$ for a strain $x$ not yet found to circulate in human hosts. We show that (See \METHODS):%
 \cgather{\label{eqrho}
@@ -78,7 +78,7 @@ To validate our score against CDC-estimated IRAT emergence scores, we construct 
 
 The time-dependence of the \erisk reflects the impact of the changing background, and recomputing the risk estimates using \enet{s} constructed from the recent circulating strains instead of using those from when the IRAT assessments took place at the  CDC,  worsens the correlation ($-0.59$, p-value $0.003$, see \SUPPLEMENTARY Table~S-\ref{irattab_current}).
 
-To map the \enet distances to  more recognizable IRAT scores, we  train a general linear model (GLM)  from the  the HA/NA-based \erisk values (See \METHODS). Since the CDC-estimated IRAT impact scores are strongly correlated with their IRAT emergence scores (correlation of $0.8015$), we also trained a separate GLM to estimate the impact score from the \erisk values, despite our theoretical intuition primarily supporting the emergence phenomenon.  Finally,  we estimate the  IRAT scores of all  $6066$  \infl strains sequenced globally between 2020 through 04/2022, and identify the ones posing maximal risk (Fig.~\ref{figirat}c). $1,773$ strains turn out to have a predicted emergence score $>6.0$. However, many of these strains are highly similar, differing by only a few edits. To identify the sufficiently distinct risky strains, we constructed the standard phylogeny from  HA sequences with score $>6$ (Fig.~\ref{figphylo}), and collapsed all leaves within $15$ edits, showing only the most risky strain within a collapsed group. This leaves $75$ strains (Fig.~\ref{figphylo}), with $68$ having emergence risk $>6.25$, and $6$ with  risk above $6.5$ (Table~\ref{highrisktab}). Subtypes of the   risky strains are overwhelmingly H1N1, followed by H3N2, with a  small number of H7N9 and H9N2. Five maximally risky strains with emergence score $>6.58$ are identified to be: 
+To map the \enet distances to  more recognizable IRAT scores, we  train a general linear model (GLM)  from the  the HA/NA-based \erisk values (\SUPPLEMENTARY Table~S-\ref{tabregGLM}). Since the CDC-estimated IRAT impact scores are strongly correlated with their IRAT emergence scores (correlation of $0.8015$), we also trained a separate GLM to estimate the impact score from the \erisk values, despite our theoretical intuition primarily supporting the emergence phenomenon.  Finally,  we estimate the  IRAT scores of all  $6066$  \infl strains sequenced globally between 2020 through 04/2022, and identify the ones posing maximal risk (Fig.~\ref{figirat}c). $1,773$ strains turn out to have a predicted emergence score $>6.0$. However, many of these strains are highly similar, differing by only a few edits. To identify the sufficiently distinct risky strains, we constructed the standard phylogeny from  HA sequences with score $>6$ (Fig.~\ref{figphylo}), and collapsed all leaves within $15$ edits, showing only the most risky strain within a collapsed group. This leaves $75$ strains (Fig.~\ref{figphylo}), with $68$ having emergence risk $>6.25$, and $6$ with  risk above $6.5$ (Table~\ref{highrisktab}). Subtypes of the   risky strains are overwhelmingly H1N1, followed by H3N2, with a  small number of H7N9 and H9N2. Five maximally risky strains with emergence score $>6.58$ are identified to be: 
 A/swine/Missouri/A02524711/2020 (H1N1), A/Camel/Inner\_Mongolia/XL/2020 (H7N9), A/swine/Indiana/A02524710/2020 (H3N2), A/swine/North Carolina/A02479173/2020 (H1N1), and A/swine/Tennessee/ A02524414/2022 (H1N1).  Additionally,  A/mink/China/chick embryo/2020 (H9N2),  with a lower estimated emergence score ($6.26$) is also important, as the most risky H9N2 strain in our analysis. We compare the HA sequences along with two dominant human strains in 2021-2022 season (See Fig.~\ref{figriskyseq}), which shows substatial residue replacements, in and out of the receptor binding domain (RBD).
 
 % compare the sequences properly.. there aer considerrable matches withn the human h3n2 and the risky h3n2
@@ -86,7 +86,10 @@ A/swine/Missouri/A02524711/2020 (H1N1), A/Camel/Inner\_Mongolia/XL/2020 (H7N9), 
 Swines are known to be efficient mixing vessels~\cite{ma2009pig,nelson2018origins,reid2003origin,Baumann}, and hence unsuprisingly host a large fraction of the risky strains ($>80\%$ over 6.0, to over $50\%$ over 6.5). Also, as  expected, most of these swine strains are of  H1N1 subtype, with the other subtypes  having emerged into humans more recently. Our finding that a H7N9 poses substantial risk is likewise not surprising:
 HH transmission has been suspected in asian-lineage H7N9 strains, and are rated by IRAT as having the greatest potential to cause a pandemic~\cite{qi2013probable}. The finding of  the most risky H9N2 strain in a mink is also unsurprising, in the light of these hosts  been recently suggested as efficient mixing vessels to breed human-compatible strains~\cite{sun2021mink}. Thus,  qualitatively results  are well aligned with the current expectations; nevertheless the ability to quantitatively rank  specific strains which pose maximal risk is a crucial new capability enabling proactive pandemic mitigation efforts.
 
-In conclusion, while numerous tools exist for ad hoc quantification of genomic similarity~\cite{posada1998modeltest,goldberger2005genomic,huelsenbeck1997phylogeny,neher2014predicting,VanderMeer2010,Smith2009}, a smaller  distance $i.e.$ a higher similarity of two strains in  these frameworks is not sufficient to imply a high likelihood of a jump. To the best of our knowledge, the \enet algorithm is  the first of its kind to learn an appropriate biologically meaningful comparison metric from data, without assuming any model of DNA or amino acid substitution, or a genealogical tree a priori. While the effect of the environment and selection cannot be inferred from a single sequence, an entire database of observed strains, processed through the right lens, can parse out useful predictive models of these complex interactions. Our results are  aligned with recent studies demonstrating effective  predictability of  future mutations  for different organisms~\cite{mollentze2021identifying,maher2021predicting}. Our approach   is currently limited by the fact that the \qdist calculation is currently applicable to analogous sequences (such as point variations of the same protein from different viral subtypes), and the \enet inference requires a  sufficient diversity of observed strains. A multi-variate regression analysis indicates  that the most important factor for our approach to succeed is  the diversity of the sequence dataset (\SUPPLEMENTARY  Table~S-\ref{tabreg}), which would exclude applicability to completely novel pathogens with no related human variants, and ones that evolve very slowly. Nevertheless, the tools reported here can improve effectiveness of the annual flu shot, and perhaps allow for the development of preemptive vaccines to  target risky animal strains  before the first human infection in the next pandemic.
+In conclusion, while numerous tools exist for ad hoc quantification of genomic similarity~\cite{posada1998modeltest,goldberger2005genomic,huelsenbeck1997phylogeny,neher2014predicting,VanderMeer2010,Smith2009}, a smaller  distance $i.e.$ a higher similarity of two strains in  these frameworks is not sufficient to imply a high likelihood of a jump. To the best of our knowledge, the \enet algorithm is  the first of its kind to learn an appropriate biologically meaningful comparison metric from data, without assuming any model of DNA or amino acid substitution, or a genealogical tree a priori. While the effect of the environment and selection cannot be inferred from a single sequence, an entire database of observed strains, processed through the right lens, can parse out useful predictive models of these complex interactions. Our results are  aligned with recent studies demonstrating effective  predictability of  future mutations  for different organisms~\cite{mollentze2021identifying,maher2021predicting}.
+
+The \qdist calculation is currently limited to analogous sequences (such as point variations of the same protein from different viral subtypes), and the \enet inference requires a  sufficient diversity of observed strains. A multi-variate regression analysis indicates  that the most important factor for our approach to succeed is  the diversity of the sequence dataset (\METHODS and \SUPPLEMENTARY  Table~S-\ref{tabreg}), which would exclude applicability to completely novel pathogens with no related human variants, and ones that evolve very slowly. Nevertheless, the tools reported here can improve effectiveness of the annual flu shot, and perhaps allow for the development of preemptive vaccines to  target risky animal strains  before the first human infection in the next pandemic.
+Apart from outlining new precision public health measures to avert pandemics, such strategies also help to non-controversially counter the impact of vaccine hesitancy which has interfered with optimal pandemic response in recent times.
 
 \section*{\METHODS}
 \input{method}
@@ -113,45 +116,15 @@ In this study, we use sequences for the Haemagglutinnin (HA)  and Neuraminidase 
 
 
 \clearpage                                                                      
-\setcounter{figure}{0}                                    \renewcommand{\figurename}{Extended Data Figure}                               
+\setcounter{figure}{0}
+\renewcommand{\figurename}{Extended Data Figure}                               
 \setcounter{table}{0}                                     
 \renewcommand{\tablename}{Extended Data Table}                                 
 \input{extfiguresandtables.tex}
 
-
-\bibliographystyle{vancouver}
-\bibliography{allbib}
-
 \clearpage
 
 
-
-\section*{Supplementary Methods: Notes on q-Distance \& Supporting Results}
-
-The \qdist is a pseudo-metric since  distinct sequences can induce the same distributions over each index, and thus evaluate to have a zero distance. This is  actually desirable; we do not want our distance to be  sensitive to changes that are not biologically relevant. The intuition is that  not all sequence variations brought about by substitutions are equally important or likely. Even with no  selection pressure, we might still see random  variations at an index if such variations do not affect the replicative fitness. Under that scenario, the corresponding $\Phi_i$ will predict a flat distribution no matter what the input sequence is, thus contributing nothing to the overall distance. And even if two strains $x,y$ have the same entry at some index $i$, the remaining residues  might induce different distributions $\Phi_i$ based on the remote dependencies, $i.e.$, the entries in $x_{-i},y_{-i}$. Also, it matters if the sequences come from two different background populations $P,Q$, $i.e.$, if the induced \enet{s} $\Phi^P,\Phi^Q$ are different. Thus, if we construct \enet{s} for H1N1 Influenza A separately for the collection years 2008 and 2009, then the same exact sequence collected in the respective years might have a non-zero distance between them, reflecting the fact that the background population the sequences arose from are different, inducing possibly different expected mutational tendencies (\SUPPLEMENTARY Table~S-\ref{tabex}).
-
-Next, we induce q-distance  between a sequence and a population and between two populations.
-\begin{defn}[Pseudo-metric between populations]
-Using the notion of Hausdorff metric between sets:
-\cgather{
-\forall x \in P, y \in Q, \notag \\ \theta(x,Q) = \min_{y \in Q} \theta(x,y)\\
-\theta(P,Q) =  \max \left \{ \max_{x \in P} \theta(x,Q) ,\max_{y \in Q} \theta(y,P) 
-\right \} }
-\end{defn}
-
-\subsection*{In-silico Corroboration of \enet Constraints}
-
-We carry out in-silico experiments to corroborate that the constraints represented within an inferred \enet are indeed reflective of the  biology in play. We compare the results of simulated mutational perturbations to sequences from our databases (for which we have already constructed \enet{s}), and then use NCBI BLAST (\href{https://blast.ncbi.nlm.nih.gov/Blast.cgi}{https://blast.ncbi.nlm.nih.gov/Blast.cgi}) to identify  if  our perturbed sequences match with existing sequences in the databases (\SUPPLEMENTARY Fig.~S-\ref{figsoa}). We find that in contrast to random variations, which rapidly diverge the trajectories, the \enet constraints tend to produce smaller variance in the trajectories, maintain a high degree of match as we extend our trajectories, and produces matches closer in time to the collection time of the  initial sequence | suggesting that the \enet  does indeed capture realistic constraints.
-
-
-\subsection*{Multivariate Regression to Identify Factors in Strain Prediction}
-
-We investigate the key factors that contribute to our successful prediction of the dominant strain in the next season. We carry out a multivariate regression with data diversity, the complexity of inferred \enet and the edit distance of the WHO recommendation from the dominant strain as independent variables. Here we define data diversity as the number of clusters we have in the input set of sequences, such that any two sequences five or less mutations apart are in the same cluster. \enet complexity is measured by the number of decision nodes in the component decision trees of the recursive forest.
-
-We select several plausible structures of the regression equation, and in each case conclude that  data diversity has the most important and statistically significant contribution (\SUPPLEMENTARY Table~S-\ref{tabreg}).
-
-
-\clearpage
 
 \section*{Supplementary Figures \& Tables}
 
