--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -17,14 +17,13 @@
 %\draftQfalse
 %--------------
 %###################################
-\def\TITLE{\LARGE \enet: Fast Scalable Pandemic Risk Assessment of \infl Strains Circulating In Non-human Hosts}
+\def\TITLE{\enet: Fast Scalable Pandemic Risk Assessment of \infl Strains Circulating In Non-human Hosts}
 %\def\TITLE{\LARGE A Biologically Meaningful Sequence Metric\\For Analyzing Evolutionary Changes\\In Novel Pathogens}
 %\def\TITLE{Learning  Mutational Patterns At Scale For\\Analysis Of Sequence Divergence\\In Novel Pathogens}
 %\def\TITLE{Learning Mutational Patterns at Scale to Analyze Sequence Divergence in Novel Pathogens}
 
 \def\authore{Kevin Wu}
 \def\authora{ Jin Li}
-\def\authorb{Timmy Li}
 \def\authorc{Aaron Esser-Kahn}
 \def\authord{Ishanu Chattopadhyay}
 
@@ -40,15 +39,14 @@
 
 %###################################
 
-\title{\TITLE}
-\author{\sffamily  \fontsize{10}{12}\selectfont   \authore$^{1}$,\authora$^{1}$, \authorb$^{1}$,  \authorc$^{2,3}$, and \authord$^{1,4,5\bigstar}$\\                                                                
+\title{\LARGE \TITLE}
+\author{\sffamily  \fontsize{10}{12}\selectfont   \authore$^{1}$,\authora$^{1}$,  \authorc$^{2,3}$, and \authord$^{1,4,5\bigstar}$\\                                                                
 \vspace{10pt}                                                                   
 
 \sffamily  \fontsize{10}{12}\selectfont                                         
 $^{1}$\addressa\\   
 $^{2}$\addressd\\
 $^{3}$\addresse\\
-$^{4}$\addressb\\
 $^{5}$\addressc                                                                 
 \vskip 1em                                                                      
 $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uchicago.edu}.}
