--- a/tex/extfiguresandtables.tex
+++ b/tex/extfiguresandtables.tex
@@ -108,7 +108,7 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
   \tikzexternalenable
     \tikzsetnextfilename{sequence}
 \vspace{-5pt}
- 
+ %\tikzXtrue
   \iftikzX
   \input{Figures/sequence_}  
   \vspace{0pt}   
@@ -117,9 +117,10 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
   \includegraphics[width=0.87\textwidth]{Figures/External/sequence.pdf}  \vspace{-5pt}   
 
   \fi
+  
 \vspace{0pt}
 
-\captionN{\textbf{Sequence comparisons.} The observed dominant strain, we note that the correct \enet  deviations tend to be within the RBD, both for H1N1 and H3N2 for HA (panel a shows one example). Additionally, by comparing the type, side chain area, and the accessible side chain area, we note that the changes often have very different properties (panel b-f). Panels g-i show the localization of the deviations in the molecular structure of HA, where we note that the changes are most frequent in the HA1 sub-unit (the globular head), and around residues and structures that have been commonly implicated in receptor binding interactions $e.g$ the $\approx 200$ loop, the $\approx 220$ loop and the $\approx 180$-helix.}\label{figseq}
+\captionN{\textbf{Sequence comparisons.} Comparing the \enet  (ENT) and the WHO recommendation (WHO), and the observed dominant strain (DOM), we note that the correct \enet  predictions tend to be within the RBD, both for H1N1 and H3N2 for HA (panel a shows one example). Additionally, by comparing the type, side chain area, and the accessible side chain area, we note that DOM and ENT are often close in important chemical properties, while WHO deviations are  not (panel b-f). Panels g-i show the localization of the deviations in the molecular structure of HA, where we note that the changes are most frequent in the HA1 sub-unit (the globular head), and around residues and structures that have been commonly implicated in receptor binding interactions $e.g$ the $\approx 200$ loop, the $\approx 220$ loop and the $\approx 180$-helix~\cite{tzarum2015structure,lazniewski2018structural,garcia2015dynamic}.}\label{figseq}
 \end{figure*}
 \else
 \refstepcounter{figure}\label{figseq}
